# hp-database

./: .gitignore  CLAUDE.md  HP_CURRENT_DATA_STRUCTURE.md  HP_HTML_DATA_STRUCTURE.md  PLAN.md  README.md  SCRAPER.md  UFW_DATA_STRUCTURE.md  alembic.ini  backup.bat  config.py  pyproject.toml  requirements.txt  run-debug.bat
.claude/: settings.local.json
db/: models.py  session.py
db/migrations/: env.py
importer/: import_scraper.py
nas/: scan_iso.py
rsrc/: kollektion.sql
scraper/: .gitignore  CLAUDE.md  CONSOLIDATION.md  FORMER_MEMBERS_PLAN.md  PLAN.md  README.md  SCRAPER.md  WEBSERVER.md  archiver.py  backfill_image_ts.py  dedup_images.py  image_path.py  migrate_images.py  migrate_structure.py  scraper.py  server.py
scraper/groups/: overrides.json
scraper/members/: 13.json  300.json  450.json  481.json  497.json  515.json  516.json  517.json  518.json  519.json  525.json  543.json  544.json  55.json  567.json  568.json  571.json  586.json  588.json  590.json  601.json  604.json  605.json  606.json  607.json  608.json  609.json  610.json  611.json  612.json  618.json  619.json  620.json  621.json  625.json  626.json  628.json  630.json  631.json  635.json  (+189 more)
scraper/releases/: 1.json  100.json  1002.json  101.json  1012.json  1017.json  102.json  1020.json  1029.json  103.json  1030.json  1035.json  104.json  1045.json  1046.json  1047.json  1048.json  1049.json  105.json  1050.json  1051.json  1052.json  1053.json  1054.json  1055.json  1057.json  1058.json  1059.json  106.json  1060.json  1061.json  1062.json  1063.json  107.json  (+2939 more)
webapp/: deps.py  main.py
(+3373 files in other folders)
