[project]
name = "hp-database"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "pymysql",
    "jinja2",
    "python-multipart",
    "requests",
    "httpx",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"
